# bs

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  roadmap.md
src/bs/: __init__.py  alembic.ini  articles.py  db.py  main.py  models.py
src/bs/migrations/: env.py
src/bs/migrations/versions/: 5f58ca71e603_articles.py  6ca5daca8e17_article_model.py
src/bs/routers/: articles.py  health.py
src/tests/: conftest.py  test_main.py
src/tests/routes/: test_articles.py  test_health.py
