[project]
name = "bs"
version = "0.1.0"
description = "bs - a blog service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pytest>=8.3.3",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "sqlmodel>=0.0.22",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",
    "anyio>=4.6.0",
    "trio>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
